--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,82 @@
-Django==3.1.14
-django_allauth==0.52.0
-django_rest_auth==0.9.5
-djangorestframework==3.14.0
-fcm_django==0.3.7
-protobuf==4.22.1
-pyfcm==1.4.9
-requests==2.22.0
+aiohappyeyeballs==2.4.4
+aiohttp==3.10.11
+aiosignal==1.3.1
+anyio==4.5.2
+asgiref==3.8.1
+async-timeout==5.0.1
+attrs==25.3.0
+backports.zoneinfo==0.2.1
+beautifulsoup4==4.13.4
+CacheControl==0.14.2
+cachetools==5.5.2
+certifi==2025.6.15
+cffi==1.17.1
+charset-normalizer==3.4.2
+cryptography==45.0.5
+cssutils==2.11.1
+defusedxml==0.7.1
+dj-rest-auth==7.0.1
+Django==3.2.25
+django-allauth==0.55.2
+django-cors-headers==3.11.0
+django-filter==2.3.0
+django-inlinecss==0.3.0
+django-naomi==0.8
+djangorestframework==3.15.1
+exceptiongroup==1.3.0
+fcm-django==2.2.1
+firebase-admin==6.9.0
+frozenlist==1.5.0
+future==1.0.0
+google-api-core==2.25.1
+google-api-python-client==2.176.0
+google-auth==2.40.3
+google-auth-httplib2==0.2.0
+google-cloud-core==2.4.3
+google-cloud-firestore==2.21.0
+google-cloud-storage==3.2.0
+google-crc32c==1.5.0
+google-resumable-media==2.7.2
+googleapis-common-protos==1.70.0
+grpcio==1.70.0
+grpcio-status==1.70.0
+h11==0.16.0
+h2==4.1.0
+hpack==4.0.0
+httpcore==1.0.9
+httplib2==0.22.0
+httpx==0.28.1
+hyperframe==6.0.1
+idna==3.10
+more-itertools==10.5.0
+msgpack==1.1.1
+multidict==6.1.0
+oauthlib==3.3.1
+Pillow==7.2.0
+propcache==0.2.0
+proto-plus==1.26.1
+protobuf==5.29.5
+psycopg2==2.8.5
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pycparser==2.22
+pyfcm==2.0.8
+PyJWT==2.9.0
+PyMySQL==1.1.1
+pynliner==0.8.0
+pyparsing==3.1.4
+python3-openid==3.2.0
+pytz==2020.1
+requests==2.32.4
+requests-oauthlib==2.0.0
+rsa==4.9.1
+six==1.17.0
+sniffio==1.3.1
+soupsieve==2.7
+sqlparse==0.3.1
+swapper==1.4.0
+typing_extensions==4.13.2
+tzdata==2025.2
+uritemplate==4.1.1
+urllib3==2.2.3
+yarl==1.15.2
